@@ -8,6 +8,7 @@ llvm-toolchain-snapshot (1:3.6~svn214630-1~exp1) experimental; urgency=medium
   * Refresh of the patches
   * Install yaml2obj, obj2yaml & verify-uselistorder in llvm-3.6
   * Remove of pollycc
+  * clang alternatives are managed by llvm-defaults
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Jul 2014 08:42:35 +0200
 
